[package]
authors = ["VexaHub Developers", "Kevin Lewi <lewi.kevin.k@gmail.com>"]
categories = ["no-std", "algorithms", "cryptography"]
description = "An implementation of a verifiable oblivious pseudorandom function (VOPRF)"
edition = "2024"
keywords = ["oprf", "voprf", "cryptography", "oblivious-prf"]
license = "MIT OR Apache-2.0"
name = "voprf-vx"
readme = "README.md"
repository = "https://github.com/vexahub/voprf-vx/"
rust-version = "1.87"
version = "1.0.0-rc.1"

[features]
alloc = []
danger = []
doctest = ["dep:p256", "dep:sha2"]
default = ["ristretto255-ciphersuite", "dep:serde"]
ristretto255 = ["dep:curve25519-dalek"]
ristretto255-ciphersuite = ["ristretto255", "dep:sha2"]
serde = ["curve25519-dalek?/serde", "hybrid-array/serde", "dep:serde"]
std = ["alloc"]

[dependencies]
curve25519-dalek = { version = "5.0.0-rc.1", default-features = false, features = ["rand_core", "zeroize"], optional = true }
derive-where = { version = "1", features = ["zeroize-on-drop"] }
digest = { version = "0.11", features = ["zeroize"] }
displaydoc = { version = "0.2", default-features = false }
elliptic-curve = { version = "0.14", features = [
    "sec1",
] }
hash2curve = "0.14"
hybrid-array = { version = "0.4", features = ["zeroize"] }
rand_core = { version = "0.10", default-features = false }
serde = { version = "1", default-features = false, features = [
    "derive",
], optional = true }
sha2 = { version = "0.11", default-features = false, features = ["zeroize"], optional = true }
p256 = { version = "0.14.0-rc.15", default-features = false, features = ["hash2curve", "oprf"], optional = true }
subtle = { version = "2.6", default-features = false }
zeroize = { version = "1.5", default-features = false }

[dev-dependencies]
hex = "0.4"
p256 = { version = "0.14.0-rc.15", default-features = false, features = [
    "hash2curve",
    "oprf",
] }
p384 = { version = "0.14.0-rc.15", default-features = false, features = [
    "hash2curve",
    "oprf",
] }
p521 = { version = "0.14.0-rc.15", default-features = false, features = [
    "hash2curve",
    "oprf",
] }
proptest = "1"
rand = "0.10"
regex = "1"
serde_json = "1"
sha2 = "0.11"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = []
features = ["doctest"]
